# virttech

./: CMakeLists.txt  VM.cpp  VM.h  code_generator.h  main.cpp  notes.txt
code_generation/: CodeGeneratorVM.cpp  CodeGeneratorVM.h  TranslationUnit.cpp  TranslationUnit.h  types.h
interpreters/: DirectSuperVM.cpp  DirectSuperVM.h  DirectVM.cpp  DirectVM.h  IndirectVM.cpp  IndirectVM.h  NaiveVM.cpp  NaiveVM.h
